--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -19,6 +19,13 @@
 .site-header a {
   text-decoration: none;
 }
+.site-title:before {
+	content: url("/favicon.ico");
+	display: inline-block;
+	position: relative;
+	width: 40px;
+	top: 5px;
+}
 .site-title {
   font-size: 26px;
   font-weight: 400;
