--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -20,10 +20,10 @@
   text-decoration: none;
 }
 .site-title:before {
-	content: url("/favicon.ico");
+	content: url("/logo.svg");
 	display: inline-block;
 	position: relative;
-	width: 40px;
+	width: 20px;
 	top: 5px;
 }
 .site-title {
