--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header class="site-header">
   <h3 class="site-title">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <div id="site-header-container">
+      <a href="{{ site.github.url }}/"><img src="/logo.svg" width="56px" height="auto"></a>
+      <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    </div>
   </h3>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
