--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,3 +1,7 @@
+#site-header-container {
+	display: flex;
+	justify-content: space-between;
+}
 .site-header {
   min-height: 56px;
   width: $container-width;
